deploy.yml
apiVersion: extensions/v1
kind: Deployment
metadata:
  labels:
    run: tomcat 
  name: my-tomcat 
  namespace: default
spec:
  replicas: 5
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: tomcat 
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: tomcat 
    spec:
      containers:
      - image: tomcat 
        imagePullPolicy: Always
        name: my-tomcat
