service.yml
apiVersion: v1 
kind: Service 
metadata: 
  name: my-tomcat 
  namespace: default
  labels: 
    run: my-tomcat
spec: 
  externalTrafficPolicy: Cluster
  ports: 
  - nodePort:
    port: 8080
    targetPort: 8080 
    protocol: TCP 
  selector: 
    run: my-tomcat
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
